UI fix SB-25220 Cursor and Search Icon are overlapping.

--- a/src/app/client/src/assets/styles/pages/_dock.scss
+++ b/src/app/client/src/assets/styles/pages/_dock.scss
@@ -921,7 +921,7 @@ app-question-set-editor{
 .sb-modal-content{
   .sb-search-box{
     .sb-search-input{
-      padding-left: 30px !important;
+      padding-left: 28px !important;
     }
     .sb-search-input::placeholder{
       padding-left: 8px !important;
